--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
             </div>
             <div class="job-summary">
               <p>
-                Build new websites and maintain existing once. As part of
-                building my experience as a Front-End Developer and enjoy
-                learning and applying my knowledge to future websites.
+                Build new websites from scratch and maintain existing once. As
+                part of building my experience as a Front-End Developer and
+                enjoy learning and applying my knowledge to future websites.
               </p>
               <!-- <p>Optional list:</p>
               <ul>
@@ -161,9 +161,7 @@
                 plans, and reporting and tracking defects to resolution. Triage
                 production support issues and work with the Director of Software
                 Development, Project Managers, and Development staff to resolve
-                issues. Involved in requirements reviews and design sessions and
-                document deliverable artifacts such as design documents, use
-                cases, usage profiles and security models.
+                issues.
               </p>
             </div>
           </section>
@@ -180,15 +178,7 @@
                 all alpha and beta testing, reporting defects and enhancements.
                 Manual test of system’s enhancements and report defects using
                 defect tracking software (OnTime). Execute and review test plans
-                and test scripts. Interacting with developers and end users on a
-                daily basis, to follow up enhancements and defects. Participate
-                in Daily Scrum Meeting (Standup) to report progress of projects.
-                Agile Dev. Life Cycle. Created & test complex test scenarios in
-                Stage and UAT environment to ensure the application meets the
-                client’s requirements. Managed database in SQL writing queries
-                from scratch. Experience with automation testing using Visual
-                Studio 2010 – Test Management System, Selenium and Telerik Test
-                Studio.
+                and test scripts.
               </p>
             </div>
           </section>
