--- a/index.html
+++ b/index.html
@@ -159,9 +159,8 @@
                 production support team regarding our applications. Writing
                 functional and regression testing plans, executing the test
                 plans, and reporting and tracking defects to resolution. Triage
-                production support issues and work with the Director of Software
-                Development, Project Managers, and Development staff to resolve
-                issues.
+                production support issues and work with the SDEs, SDETs, PMs,
+                and Dev. staff to resolve issues.
               </p>
             </div>
           </section>
