--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
               Dictionary website was created using the React components and
               applying API's for meaning and images displayed in the page. The
               app is a responsive application, to view in all types of devices.
-              Any word can be find using the corresponding API call.
+              This was an individual project.
             </p>
             <a
               class="btn"
               href="https://cocky-thompson-4e9c1e.netlify.app"
               target="_blank"
-              >View project / case study</a
+              >Dictionary React app</a
             >
           </section>
           <section class="project-item">
@@ -78,13 +78,14 @@
             <h3>Weather Application - React.js</h3>
             <p>
               I love to create weather applications. This application was
-              designed using React components and APIs.
+              designed using React components and APIs. This was an individual
+              project.
             </p>
             <a
               class="btn"
               href="https://awesome-keller-962519.netlify.app"
               target="_blank"
-              >View project / case study</a
+              >Weather React app</a
             >
           </section>
           <section class="project-item">
@@ -101,7 +102,7 @@
               class="btn"
               href="https://vibrant-volhard-da8b7e.netlify.app"
               target="_blank"
-              >View project / case study</a
+              >Weather Application JS</a
             >
           </section>
           <!-- End of Project block. -->
@@ -214,7 +215,7 @@
             <p>Associate's Degree - Graphic Design</p>
           </section>
           <section>
-            <h3>Universidad Nacional de Cuyo - Argentina</h3>
+            <h3>UNC</h3>
             <p>Bachelor's Degree - Graphic Design</p>
           </section>
 
