--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </section>
           <section class="job-item">
             <div class="job-details">
-              <h3>Software Engineer Quality Assurance</h3>
+              <h3>SDETs</h3>
               <p>UHC - MCNA Dental</p>
               <p>January 2013 - Present</p>
             </div>
@@ -167,7 +167,7 @@
           </section>
           <section class="job-item">
             <div class="job-details">
-              <h3>Software Engineer Quality Assurance</h3>
+              <h3>SDE QA</h3>
               <p>Kaplan University</p>
               <p>January 2012 - January 2013</p>
             </div>
